--- a/src/page/User/Home/Style.css
+++ b/src/page/User/Home/Style.css
@@ -31,9 +31,23 @@
 .button-custom:hover {
     cursor: pointer;
     color: var(--red);
-    transform: scale(0.9);
 }
 
 .button-custom:hover::before {
     transform: translate3d(-100%, -100%, 0) scale3d(25, 25, 25);
+}
+
+.button-disable {
+    z-index: 1;
+    text-transform: uppercase !important;
+    border: 1px solid var(--red);
+    background-color: var(--red);
+    color: var(--white);
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    overflow: hidden;
+    font-weight: bold;
+    border-radius: 18px;
+    opacity: 0.7;
+    cursor: no-drop;
 }
