--- a/src/page/User/CheckOut/Style.css
+++ b/src/page/User/CheckOut/Style.css
@@ -1,3 +1,14 @@
+.payment-content {
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.6s ease-out;
+}
+
+.show {
+    max-height: 500px;
+    transition: max-height 0.6s ease-in;
+}
+
 .from-item__custom .ant-input:hover {
     border-color: var(--grey);
 }
